[workspace]
members = ["causal-hub", "python"]
default-members = ["causal-hub"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Alessio Zanga <alessio.zanga@outlook.it>"]
edition = "2024"

[workspace.dependencies]
approx = "^0.5"
csv = "^1.3"
dry = "^0.1"
fxhash = "^0.2"
indexmap = { version = "^2.11", features = ["rayon", "serde"] }
itertools = "^0.14"
log = "^0.4"
ndarray = { version = "^0.16", features = ["approx", "rayon", "serde"] }
ndarray-stats = "^0.6"
paste = "^1.0"
pest = "^2.8"
pest_derive = "^2.8"
rand = "^0.9"
rand_distr = "^0.5"
rayon = "^1.11"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
statrs = { version = "^0.18", default-features = false }
