[workspace]
members = ["causal-hub", "python"]
default-members = ["causal-hub"]
resolver = "2"

[workspace.package]
version = "0.0.4"
authors = ["Alessio Zanga <alessio.zanga@outlook.it>"]
edition = "2024"
rust-version = "1.91.0"
description = "A library for causal models, inference and discovery."
documentation = "https://docs.rs/causal-hub"
readme = "README.md"
homepage = "https://github.com/AlessioZanga/causal-hub"
repository = "https://github.com/AlessioZanga/causal-hub"
license = "AGPL-3.0-only"
keywords = ["causality"]
categories = ["science", "mathematics", "algorithms", "data-structures"]

[workspace.dependencies]
approx = "^0.5"
csv = "^1.3"
dry = "^0.1"
fxhash = "^0.2"
indexmap = { version = "^2.11", features = ["rayon", "serde"] }
itertools = "^0.14"
log = "^0.4"
paste = "^1.0"
rand = "^0.9"
rayon = "^1.11"
serde = { version = "^1.0", features = ["derive"] }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
