[package]
name = "causal-hub"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
approx.workspace = true
csv.workspace = true
dry.workspace = true
fxhash.workspace = true
indexmap.workspace = true
jsonschema = { version = "^0.33", default-features = false }
itertools.workspace = true
log.workspace = true
ndarray = { version = "^0.16", features = ["approx", "rayon", "serde"] }
ndarray-stats = "^0.6"
paste.workspace = true
pest = "^2.8"
pest_derive = "^2.8"
rand.workspace = true
rand_distr = "^0.5"
rayon.workspace = true
serde.workspace = true
serde_json = "^1.0"
statrs = { version = "^0.18", default-features = false }

[dev-dependencies]
rand_xoshiro = "^0.7"
