[package]
name = "causal-hub"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
approx.workspace = true
csv.workspace = true
dry.workspace = true
fxhash.workspace = true
indexmap.workspace = true
jsonschema = { version = "^0.33", default-features = false }
itertools.workspace = true
log.workspace = true
ndarray = { version = "^0.16", features = ["approx", "rayon", "serde"] }
ndarray-stats = "^0.6"
paste.workspace = true
pest = "^2.8"
pest_derive = "^2.8"
rand.workspace = true
rand_distr = "^0.5"
rayon.workspace = true
serde.workspace = true
serde_json = "^1.0"
statrs = { version = "^0.18", default-features = false }

# Optional BLAS support for ndarray.
blas-src = { version = "^0.12", optional = true }
openblas-src = { version = "^0.10", optional = true }

[dev-dependencies]
rand_xoshiro = "^0.7"

[features]
default = []
openblas-static = [
    "ndarray/blas",
    "blas-src/openblas",
    "openblas-src/cache",
    "openblas-src/static",
]
openblas-system = [
    "ndarray/blas",
    "blas-src/openblas",
    "openblas-src/system",
]
