[package]
name = "causal-hub"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
approx.workspace = true
csv.workspace = true
dry.workspace = true
fxhash.workspace = true
indexmap.workspace = true
jsonschema = { version = "^0.38", default-features = false }
itertools.workspace = true
log.workspace = true
ndarray = { version = "^0.17", features = ["approx", "rayon", "serde"] }
ndarray-linalg = { version = "^0.18", default-features = false }
ndarray-stats = "^0.7"
paste.workspace = true
pest = "^2.8"
pest_derive = "^2.8"
rand.workspace = true
rand_distr = "^0.5"
rayon.workspace = true
serde.workspace = true
serde_json = "^1.0"
statrs = { version = "^0.18", default-features = false }

# Optional BLAS support for ndarray.
blas-src = { version = "^0.14", optional = true }
accelerate-src = { version = "^0.3", optional = true }
openblas-src = { version = "^0.10", optional = true }

[dev-dependencies]
rand_xoshiro = "^0.7"

[features]
default = ["openblas-static"]
accelerate-system = [
    "ndarray/blas",
    "blas-src/accelerate",
]
openblas-static = [
    "ndarray/blas",
    "ndarray-linalg/openblas-static",
    "blas-src/openblas",
    "openblas-src/cache",
    "openblas-src/static",
]
openblas-system = [
    "ndarray/blas",
    "ndarray-linalg/openblas-system",
    "blas-src/openblas",
    "openblas-src/system",
]
