[package]
name = "causal-hub-python"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "causal_hub"
crate-type = ["cdylib", "rlib"]

[dependencies]
approx.workspace = true
backend = { package = "causal-hub", path = "../causal-hub" }
dry.workspace = true
fxhash.workspace = true
log.workspace = true
numpy = "^0.25"
paste.workspace = true
pyo3 = "^0.25"
pyo3-log = "^0.12"
pyo3-stub-gen = { version = "^0.13", features = ["numpy"] }
pyo3-stub-gen-derive = "^0.13"
rand.workspace = true
rand_xoshiro = "^0.7"
rayon.workspace = true

[features]
default = []
openblas-static = ["backend/openblas-static"]
openblas-system = ["backend/openblas-system"]
