[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "causal-hub"
version = "0.0.1"
description = "A library for causal models, inference and discovery."
license = "AGPL-3.0-only"
readme = "../README.md"
requires-python = ">=3.10"
authors = [{ name = "Alessio Zanga", email = "alessio.zanga@outlook.it" }]
keywords = ["causality"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["numpy", "scipy", "pandas", "networkx"]

[project.urls]
homepage = "https://github.com/AlessioZanga/causal-hub"
repository = "https://github.com/AlessioZanga/causal-hub"
documentation = "https://crates.io/crates/causal-hub"

[tool.maturin]
features = ["pyo3/abi3-py310", "pyo3/extension-module", "openblas-static"]
strip = true

[tool.maturin.x86_64-pc-windows-msvc]
features = ["pyo3/abi3-py310", "pyo3/extension-module", "openblas-system"]
strip = true

[tool.maturin.i686-pc-windows-msvc]
features = ["pyo3/abi3-py310", "pyo3/extension-module", "openblas-system"]
strip = true
